--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>manish</h1>
+    <h1>manish hii</h1>
+    <h2>hello react</h2>
+    <h3>hiiiiiiiiiiiiiii.........</h3>
 </body>
 </html>
